--- a/index.html
+++ b/index.html
@@ -1,61 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
-  <title>Frontend Mentor | News homepage</title>
-
-  
 </head>
 <body>
+
+</body>
+
+  <style>
+    img {
+      max-width: 100%;
+      max-height: 100%;
+    }
+    .picture1{
+      width: 100px;
+      height: 500px;
+
+    }
+  </style>
 <header class="container header">
-<img src="./assets/images/logo.svg" alt="logo">
-  <ul class="nav"> 
- <li><a href="#"> Home</a> </li>
- <li><a href="#">New</a></li>
- <li><a href="#">Popular</a></li>
- <li><a href="#">Trending</a></li>
- <li><a href="#">Categories</a></li>
+<div class="picture1">
+  <img src="imgs/NEW LGOG.png" alt="logo">
+</div>
+<ul class="nav">
+<li><a href="#">Home</a> </li>
+<li><a href="#">Gallery</a> </li>
+<li><a href="#">Blog</a> </li>
+<li><a href="#">Contact</a> </li>
 </ul>
 </header>
-<main class="container">
-  The Bright Future of Web 3.0?
-
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
-
-  Read more
-
-  New 
-
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
-
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50%
+<main class="container main">
+  <div class="left">
+    <img src="./imgs/Main page left bg.jpg " alt="bg">
+  This is Zaha Hadid
+  The Well-known Iraqi architect.
+This is my website Portfolio.
+ 
+“When Architecture Met Fashion
+ in the Hands of Zaha Hadid.”
+</div>
 </main>
-
-<section class="container">
-   YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-</section>
-
 </body>
 </html>
