--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <head>
   <link rel="stylesheet" href="style.css">
+  
 </head>
 <body>
 
 </body>
-
   <style>
     img {
       max-width: 100%;
@@ -22,22 +22,33 @@
   <img src="imgs/NEW LGOG.png" alt="logo">
 </div>
 <ul class="nav">
-<li><a href="#">Home</a> </li>
-<li><a href="#">Gallery</a> </li>
-<li><a href="#">Blog</a> </li>
-<li><a href="#">Contact</a> </li>
+<li><a class="active" href="index.html">Home</a> </li>
+<li><a href="index gallery.html">Gallery</a> </li>
+<li><a href="index blog.html">Blog</a> </li>
+<li><a href="index contact.html">Contact</a> </li>
 </ul>
 </header>
+<body>
+
 <main class="container main">
-  <div class="left">
-    <img src="./imgs/Main page left bg.jpg " alt="bg">
-  This is Zaha Hadid
-  The Well-known Iraqi architect.
+
+    <div class="hero">
+ <h1 class="hero-text">This is Zaha Hadid</h1> 
+ <div class="hero-description">
+  <p class="hero paragraph">
+  <h3>The Well-known Iraqi architect.
 This is my website Portfolio.
- 
 “When Architecture Met Fashion
- in the Hands of Zaha Hadid.”
+ in the Hands of Zaha Hadid.”Hadid began her studies at the American University in Beirut, Lebanon, receiving a bachelor’s degree in mathematics. In 1972 she traveled to London to study at the Architectural Association, a major centre of progressive architectural thought during the 1970s. There she met the architects Elia Zenghelis and Rem Koolhaas, with whom she would collaborate as a partner at the Office of Metropolitan Architecture. Hadid established her own London-based firm, Zaha Hadid Architects (ZHA), in 1979.</h3
+</p>
+<a href="index gallery.html"
+class="btn">Let's Go!</a>
+
+
+
+</div>
 </div>
 </main>
+</body>
 </body>
 </html>
