--- a/index.html
+++ b/index.html
@@ -7,48 +7,42 @@
 
 </body>
   <style>
-    img {
-      max-width: 100%;
-      max-height: 100%;
-    }
-    .picture1{
-      width: 100px;
-      height: 500px;
-
-    }
   </style>
-<header class="container header">
-<div class="picture1">
-  <img src="imgs/NEW LGOG.png" alt="logo">
-</div>
-<ul class="nav">
-<li><a class="active" href="index.html">Home</a> </li>
-<li><a href="index gallery.html">Gallery</a> </li>
-<li><a href="index blog.html">Blog</a> </li>
-<li><a href="index contact.html">Contact</a> </li>
-</ul>
-</header>
+
+<header class="header">
+  <div class="picture1">
+    <img src="imgs/NEW LGOG.png" alt="logo">
+  </div>
+  <ul class="nav">
+  <li><a href="index.html">Home</a> </li>
+  <li><a href="gallery.html">Gallery</a> </li>
+  <li><a href="index blog.html">Blog</a> </li>
+  <li><a href="index contact.html">Contact</a> </li>
+  </ul>
+  </header>
+
 <body>
+  
 
-<main class="container main">
+<section class="container main">
 
-    <div class="hero">
+<div>
  <h1 class="hero-text">This is Zaha Hadid</h1> 
  <div class="hero-description">
-  <p class="hero paragraph">
   <h3>The Well-known Iraqi architect.
-This is my website Portfolio.
-“When Architecture Met Fashion
- in the Hands of Zaha Hadid.”Hadid began her studies at the American University in Beirut, Lebanon, receiving a bachelor’s degree in mathematics. In 1972 she traveled to London to study at the Architectural Association, a major centre of progressive architectural thought during the 1970s. There she met the architects Elia Zenghelis and Rem Koolhaas, with whom she would collaborate as a partner at the Office of Metropolitan Architecture. Hadid established her own London-based firm, Zaha Hadid Architects (ZHA), in 1979.</h3
-</p>
-<a href="index gallery.html"
-class="btn">Let's Go!</a>
-
-
-
+    This is my website Portfolio.
+     
+    “When Architecture Met Fashion
+     in the Hands of Zaha Hadid.”She began her own practice in London in 1980 and won the prestigious competition for the Hong Kong Peak Club, a leisure and recreational center in 1983. Painting and drawing, especially in her early period, are important techniques of investigation for her design work. Ever since her 1983 retrospective exhibition at the AA in London, her architecture has been shown in exhibitions worldwide and many of her works are held in important museum collections!</h3
+     
 </div>
+<img src="imgs/main img home pag.png" class="jew" alt="jew"
 </div>
-</main>
+<a href="gallery.html"class="btn">Let's Go!</a>
+</section>
+
 </body>
+
+
 </body>
 </html>
