--- a/index blog.html
+++ b/index blog.html
@@ -31,9 +31,9 @@
         <div class="desc">Heydar  </div>
     </div>
     <div class="gallery">
-      <img src="imgs/Untitled-2.png">
-      <div class="desc">Click on Image to view a bigger picture of Zaha Hadid</div>
-  </div>
+      <a href="picof zaha.html"><img src="imgs/Untitled-2.png">
+      <div class="desc1">Click on Image or text to view a bigger picture of Zaha Hadid</div> <a
+    </div>
   </div>
 
   <section class="container main">
