--- a/index contact.html
+++ b/index contact.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+  
 </head>
 <header class="header">
   <div class="picture1">
@@ -21,10 +21,40 @@
   </ul>
   </header>
 <body>
-  <div class="contact-section">
-    <div class="contact-info">
-      <div> <i class="fa-solid fa-location-dot"></i></div>
-    </div>
+  
+  
+  
+
+
+    <h1>Contact Me</h1>
+    <div class="contact-section">
+
+    <form class="contact-form" action="index contact.html" method="post">
+      <input type="text" class="contact-form-text" placeholder="Your Name">
+      <input type="text" class="contact-form-text" placeholder="Your Email">
+      <input type="text" class="contact-form-text" placeholder="Your Phone">
+      <textarea class="contact-form-text" placeholder="Your Message"></textarea>
+      <input type="submit" class="contact-form-btn" value="Send">
+    </form>
   </div>
+
+ 
+  <footer>
+    <div class="footer-content">
+      <h3>Get in Touch</h3>
+      <p>Hey there, We are looking forward to start 
+        a porject with you!</p>
+      <ul class="socials">
+        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+        <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
+      </ul>
+    </div>
+    <div class="footer-bottom">
+      <p>copyright &copy;2020 ZA.CO. designed by <span>ZA.CO</span></p>
+  </div>
+  </footer>
 </body>
 </html>
