--- a/index contact.html
+++ b/index contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="style contact.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -42,15 +43,17 @@
   <footer>
     <div class="footer-content">
       <h3>Get in Touch</h3>
+       <ul class="socials">
+        <div class="icons"> 
+        <a href="https://www.behance.net/search/projects?search=ZAHA+HADID&sort=recommended&time=month"<i class="fa-brands fa-square-behance"></i></a>
+        <a href="https://www.instagram.com/zahahadidarchitects/?hl=en"<i class="fa-brands fa-square-instagram"></i></a>
+       <a href="https://www.linkedin.com/company/zaha-hadid-architects/?originalSubdomain=uk" <i class="fa-brands fa-linkedin"></i></a>
+      <a href="https://m.facebook.com/ZHANews/about/"<i class="fa-brands fa-facebook"></i></a>
+        <a href="https://twitter.com/zahahadiddesign"<i class="fa-brands fa-twitter"></i></a>
+      </ul>
       <p>Hey there, We are looking forward to start 
         a porject with you!</p>
-      <ul class="socials">
-        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-        <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
-      </ul>
+     
     </div>
     <div class="footer-bottom">
       <p>copyright &copy;2020 ZA.CO. designed by <span>ZA.CO</span></p>
