--- a/index blog.html
+++ b/index blog.html
@@ -31,7 +31,7 @@
         <div class="desc">Heydar  </div>
     </div>
     <div class="gallery">
-      <a href="picof zaha.html"><img src="imgs/Untitled-2.png">
+      <a href="blog2.html"><img src="imgs/Untitled-2.png">
       <div class="desc1">Click on Image or text to view a bigger picture of Zaha Hadid</div> <a
     </div>
   </div>
